feat: accept structured issue input format (SL-034)
